# advent-of-code

./: .gitignore  README.md
2022/ocaml/: dune  dune-project  puzzle_1_2.ml  puzzle_2_1.ml  puzzle_5_1.ml  puzzle_7_1.ml  puzzle_7_2.ml
2022/ocaml/_build/: .db  .digest-db  log
2022/ocaml/_build/default/: aoc.dune-package  aoc.install  puzzle_1_1.ml  puzzle_2_2.ml  puzzle_3_1.ml  puzzle_3_1_alt.ml  puzzle_3_2.ml  puzzle_4_1.ml  puzzle_4_2.ml  puzzle_5_2.ml  puzzle_6_1.ml  puzzle_6_2.ml  puzzle_8_1.ml  puzzle_8_2.ml
2022/ocaml/_build/default/.merlin-conf/: exe-puzzle_1_1-fda96ce9135bd061e60979dc5179ef6d
2022/ocaml/_build/default/.puzzle_1_1.eobjs/: dune__exe.ml-gen  dune__exe__Puzzle_1_1.impl.d  dune__exe__Puzzle_1_1.intf.d  dune__exe__Puzzle_1_2.impl.d  dune__exe__Puzzle_1_2.intf.d  dune__exe__Puzzle_2_1.impl.d  dune__exe__Puzzle_2_1.intf.d  dune__exe__Puzzle_2_2.impl.d  dune__exe__Puzzle_2_2.intf.d  dune__exe__Puzzle_3_1.impl.d  dune__exe__Puzzle_3_1.intf.d  dune__exe__Puzzle_3_1_alt.impl.d  dune__exe__Puzzle_3_1_alt.intf.d  dune__exe__Puzzle_3_2.impl.d  dune__exe__Puzzle_3_2.intf.d  dune__exe__Puzzle_4_1.impl.d  dune__exe__Puzzle_4_1.intf.d  dune__exe__Puzzle_4_2.impl.d  (+17 more)
2022/ocaml/add-along/: README.md
2022/ocaml/add-along/_build/: .db  .digest-db  log
2022/ocaml/helloworld/_build/: .db  .digest-db  log
2023/ocaml/: dune  dune-project  puzzle_01_1.ml  puzzle_01_2.ml  puzzle_02_1.ml  puzzle_02_2.ml  puzzle_03_1.ml  puzzle_03_2.ml  puzzle_04_1.ml  puzzle_04_2.ml  puzzle_05_1.ml  puzzle_05_1bad.ml  puzzle_05_2.ml  puzzle_06_1.ml  puzzle_06_2.ml  puzzle_07_1.ml  puzzle_07_2.ml  puzzle_08_1.ml  puzzle_08_2.ml  puzzle_09_1.ml  puzzle_09_2.ml  puzzle_10_1.ml  puzzle_10_2.ml  puzzle_10_2_alt.ml  puzzle_10_2_fail.ml  puzzle_11.ipynb  puzzle_11_1.ml  puzzle_12_1.ml  puzzle_12_1a.ml  puzzle_13_1.ml  puzzle_14_1.ml  puzzle_15_1.ml  puzzle_15_2.ml  puzzle_16_1.ml  puzzle_17_1.ml  puzzle_18_1.ml  puzzle_18_2.ml  puzzle_19_1.ml  puzzle_19_2.ml  puzzle_1_1.ml  (+1 more)
2023/ocaml/lib/: dune  helper.ml
(+108 files in other folders)
