(executables
 (names puzzle_1_1 puzzle_1_2 puzzle_2_1 puzzle_2_2 puzzle_3_1 puzzle_3_2 puzzle_3_1_alt puzzle_4_1 puzzle_4_2 puzzle_5_1 puzzle_5_2 puzzle_6_1 puzzle_6_2 puzzle_7_1 puzzle_7_2 puzzle_8_1 puzzle_8_2)
 (public_names puzzle_1_1 puzzle_1_2 puzzle_2_1 puzzle_2_2 puzzle_3_1 puzzle_3_2 puzzle_3_1_alt puzzle_4_1 puzzle_4_2 puzzle_5_1 puzzle_5_2 puzzle_6_1 puzzle_6_2 puzzle_7_1 puzzle_7_2 puzzle_8_1 puzzle_8_2)
 (libraries Helper base stdio))
